# IDLE-CN

./: .gitignore  .gitmodules  Build.md  LICENSE  README.md  Test.md  idcn.pth  idlecn.pth  pyproject.toml  setup.py
Tools/: make_release.cmd  make_release.py  release_versions.txt
idcn/: __init__.py
idlecn/: __init__.py
